[package]
name = "erc1155-tests"
version = "0.1.0"
authors = ["Jonas Pauli"]
edition = "2021"

[dev-dependencies]
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
casper-engine-test-support = { version = "4.0.0", features = ["test-support"] }
casper-execution-engine = "4.0.0"
casper-hashing = { version = "1.4.4" }
casper-types = { version = "2.0.0", default-features = false, features = ["std"] }
casper-contract = { version = "2.0.0", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "amm-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false